// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-media-by-id-referenced-descendants should get references to descendant media items 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-descendants should handle media with no descendants 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-descendants should handle non-existent media ID 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-descendants should return empty when media folder has no referenced descendants 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;
